Bug 100034 - Impossible to persistently remove print-range restrictions in .xlsx spreadsheet
Summary: Impossible to persistently remove print-range restrictions in .xlsx spreadsheet
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.3.2 release
Hardware: All All
: medium minor
Assignee: Czeber László Ádám (NISZ)
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: Print-Range Excel-Default-Names
  Show dependency treegraph
 
Reported: 2016-05-24 18:38 UTC by Jim Avera
Modified: 2023-05-24 09:00 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Demo file used to reproduce - see original bug report (18.32 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2016-05-24 18:38 UTC, Jim Avera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Avera 2016-05-24 18:38:07 UTC
Created attachment 125261 [details]
Demo file used to reproduce - see original bug report

If certain print ranges are defined in a spreadsheet, it is impossible to persistently clear them so that after a save & reload, the entire spreadhseet is visible when printed.

Format->Print Ranges->Clear works momentarily, but after saving and reloading, the supposedly-erased print range restrictions are resurrected.

STEPS TO REPRODUCE:

1. Open the attached test.xlsx
2. Format->Print Ranges->Clear
3. Print-Preview or Format->Print Ranges->Edit
      to verify that there are not print-range restrictions

4. Save, then Reload
5. Repeat step #3

RESULTS: Some columns are hidden when printing

EXPECTED RESULTS: Print ranges should no longer exist

(May be related to bug 50122, but AFAIK this document does not use external links; although I got it from someone else so I'm not certain)
Comment 1 Jim Avera 2016-05-24 18:39:43 UTC
Correction: The possibly-related bug is bug 51022
Comment 2 Buovjaga 2016-05-27 11:27:25 UTC
Repro.
Lowering severity as it does not affect .ods.

Adding "see also" as a developer snooping around the relevant code might want to fix all the reported bugs at the same time.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: 60041cb237ea73c2c1885dd6afd99d88780c2dfc
CPU Threads: 8; OS Version: Linux 4.5; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on May 26th 2016
Comment 3 QA Administrators 2018-07-12 02:43:42 UTC Comment hidden (obsolete)
Comment 4 Jim Avera 2018-07-12 19:49:57 UTC
Bug is STILL THERE in master (6.2.0.0.alpha0+ 2018-07-12_01:06:03).

After save/reload the supposedly-cleared print ranges are resurrected and part of the spreadsheet will not print.
Comment 5 QA Administrators 2019-07-13 02:47:33 UTC Comment hidden (obsolete)
Comment 6 Jim Avera 2019-07-20 05:46:50 UTC
Bug still there in 

Version: 6.4.0.0.alpha0+
Build ID: f75c2b04785aa05cff3bcd52689feb7400a14e8e
CPU threads: 12; OS: Linux 4.18; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-06-15_11:49:26
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

Note: Affects .xlsx not .ods
Comment 7 NISZ LibreOffice Team 2021-04-15 07:56:05 UTC
Still present in:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 77419c6f3aba1fd5b1660795923c22a39bdb1bad
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL
Comment 8 Commit Notification 2023-05-23 10:16:37 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/639519dc2bad058197b6ff73c9e3df622f979f97

tdf#100034: Fix to persistently remove print-range

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 NISZ LibreOffice Team 2023-05-24 09:00:07 UTC
VERIFIED IN:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: f3aab159f1c1e00c25e6b4ca1e50813bc343f4f3
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded